--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+justify-content: space-between;
+padding: 8px;
 }
 
 .profile-image {
@@ -20,6 +23,8 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .logo {
@@ -35,14 +40,26 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  display: flex;
+  justify-content: end;
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  padding: 10px;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+margin: 0;
+padding: 0;
+gap: 16px;  
+}
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
