--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,33 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+
+.modal {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 16px;
+  gap: 16px;
+}
+.icon {
+  flex-shrink: 0;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+}
+.header {
+  font-weight: 700;
+  font-size: 18px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.text {
+  margin-bottom: 16px;
+}
+.button {
+  display: flex;
+}
